# vault-er

./: README.md  package-lock.json  package.json
.github/workflows/: publish.yml
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  dropzone.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: auth.svelte  dashboard.svelte  login-form.svelte  protected.svelte
src/lib/: auth-store.ts  auth.ts  db.ts  indexer.ts  ui-store.ts  utils.ts
src/lib/components/: back-button.svelte  mode-toggle.svelte  native-surface.svelte  qr-share-dialog.svelte
src/lib/components/auth/: protected-route.svelte
src/lib/components/dashboard/: SearchDialog.svelte  dashboard-header.svelte  spaces.svelte
src/lib/components/shapes/: shape1.svelte
src/lib/components/ui/: spinner.svelte
src/lib/components/ui/context-menu/: context-menu-item.svelte
src/lib/components/ui/label/: index.ts  label.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/dropzone/: +page.svelte
src/routes/space/: +page.svelte  +page.ts
